# boards

./: .env  .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  vercel.json
api/: index.py
apps/: settings.py  urls.py  views.py  wsgi.py
event/: models.py  urls.py  views.py
event/migrations/: 0001_initial.py  0002_alter_study_peji1_alter_study_peji2.py  0003_alter_study_textbook_name.py  0004_diary.py  0005_alter_diary_tenki.py  0006_rename_thank_diary_sonohoka.py  0007_rename_tenki_diary_tenki1_diary_tenki2.py  0008_alter_diary_date.py  0009_dd.py  0010_alter_dd_date_alter_diary_date.py  0011_rename_dekigoto_dd_text_dd_title.py  0012_smoke.py  0013_diet_eat.py  0014_diet_play_diet_time.py  0015_diet_date.py  0016_eat_eat_time.py  0017_diet_age_diet_height_diet_kg.py  0018_alter_diet_bmi.py  0019_eat_dinner_eat_lunch_eat_morning_eat_sonohoka_and_more.py  0020_alter_eat_dinner_alter_eat_lunch_alter_eat_morning_and_more.py  0021_eat_date.py  0022_alter_smoke_date.py  0023_alter_smoke_date.py  0024_alter_dd_title_alter_eat_dinner_alter_eat_eat_time_and_more.py  0025_alter_dd_jinbutu_alter_dd_kansou_alter_dd_text_and_more.py  0026_kyouka.py  0027_remove_diet_age.py
event/static/event/: diary.css  diet.css  dream_diary.css  kyouka.css  shousai.css  smoke.css  study.css
event/templates/event/: diary.html  diary_shousai.html  diet.html  diet1.html  diet2.html  diet_shousai.html  dream_diary.html  dream_diary_shousai.html  (+6 more)
login/: urls.py  views.py
login/templates/: login.html  signup.html
static/: style.css
templates/: base.html  index.html
