[tool.poetry]
name = "apps"
version = "0.1.0"
description = ""
authors = ["Katsuhide Tsuruta <katsuhide.tsuruta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
mysqlclient = "^2.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
