[tool.poetry]
name = "apps"
version = "0.1.0"
description = ""
authors = ["Katsuhide Tsuruta <katsuhide.tsuruta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
uvicorn = "^0.34.0"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
